[gd_scene load_steps=15 format=3 uid="uid://bkr1f8qxvn2ej"]

[ext_resource type="Script" uid="uid://b1hns1kcm8igy" path="res://entities/player/Player.gd" id="1_1"]
[ext_resource type="Script" uid="uid://15fpysi53wp8" path="res://entities/player/InputComponent.gd" id="2_1"]
[ext_resource type="PackedScene" uid="uid://kcwy4wicyv80" path="res://entities/player/PlayerRigv2-m.tscn" id="2_2rv2u"]
[ext_resource type="Script" uid="uid://wkdmrxhphk6x" path="res://entities/player/MovementComponent.gd" id="3_1"]
[ext_resource type="Resource" uid="uid://dyvg7kxmx0g4l" path="res://resources/gameplay/DefaultMovementData.tres" id="4_1"]
[ext_resource type="Script" uid="uid://cl4a5wq8vfuex" path="res://entities/player/AnimationComponent.gd" id="5_1"]
[ext_resource type="Script" uid="uid://bq1tubplyf1g6" path="res://entities/player/StateMachine.gd" id="6_1"]
[ext_resource type="Script" uid="uid://duqsvb2aw0d00" path="res://entities/player/states/Idle.gd" id="7_1"]
[ext_resource type="Script" uid="uid://bi8asnelxs0ds" path="res://entities/player/states/Run.gd" id="8_1"]
[ext_resource type="Script" uid="uid://d134vd38f2nlx" path="res://entities/player/states/Jump.gd" id="9_1"]
[ext_resource type="Script" uid="uid://cj3u3xxi4iepn" path="res://entities/player/states/Fall.gd" id="10_1"]
[ext_resource type="Script" uid="uid://d3l6slaecgt7o" path="res://entities/player/states/WallSlide.gd" id="11_1"]
[ext_resource type="Script" uid="uid://bjooim503vaxm" path="res://entities/player/states/Walk.gd" id="13_mq27t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1"]
radius = 30.0
height = 60.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-196, -34)
scale = Vector2(-1.0359966, -0.199832)
shape = SubResource("CapsuleShape2D_1")

[node name="Visuals" type="Node2D" parent="."]

[node name="PlayerRigv2-m" parent="Visuals" instance=ExtResource("2_2rv2u")]
position = Vector2(-395, -289)
scale = Vector2(0.5, 0.5)

[node name="Components" type="Node" parent="."]

[node name="InputComponent" type="Node" parent="Components"]
script = ExtResource("2_1")

[node name="MovementComponent" type="Node" parent="Components"]
script = ExtResource("3_1")
movement_data = ExtResource("4_1")

[node name="AnimationComponent" type="Node" parent="Components"]
script = ExtResource("5_1")

[node name="StateMachine" type="Node" parent="Components"]
script = ExtResource("6_1")

[node name="Idle" type="Node" parent="Components/StateMachine"]
script = ExtResource("7_1")

[node name="Run" type="Node" parent="Components/StateMachine"]
script = ExtResource("8_1")

[node name="Jump" type="Node" parent="Components/StateMachine"]
script = ExtResource("9_1")

[node name="Fall" type="Node" parent="Components/StateMachine"]
script = ExtResource("10_1")

[node name="WallSlide" type="Node" parent="Components/StateMachine"]
script = ExtResource("11_1")

[node name="Walk" type="Node" parent="Components/StateMachine"]
script = ExtResource("13_mq27t")
